--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 code/protected/config/constants.php
 code/protected/config/main.php
-code/images/
+*.log
+*.txt
+code/images/*
 code/assets/*
 code/log/*
 code/csvupload/*
 code/protected/views/storeFront/*
+code/.idea/*
+code/.idea
 project4.ppx
 project4.ppj
 .jsdtscope
