--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ org.eclipse.php.core.prefs
 org.eclipse.wst.jsdt.ui.superType.container
 org.eclipse.wst.jsdt.ui.superType.name
 code/protected/runtime/system.log
+code/protected/runtime/application.log.*
