--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ org.eclipse.wst.jsdt.ui.superType.container
 org.eclipse.wst.jsdt.ui.superType.name
 code/protected/runtime/system.log
 code/protected/runtime/application.log.*
+code/protected/config/db-config.php
+
